--- a/app/templates/go.html
+++ b/app/templates/go.html
@@ -4,7 +4,9 @@
 {% block message %}
     <hr />
     <h4 class="text-center">Description</h4>
-    <p class="text-center"><i>{{query}}</i></p>
+    <p class="text-center"><i>{{ description }}</i></p>
+    <h4 class="text-center">Number of included guests</h4>
+    <p class="text-center"><i>{{ guests }}</i></p>
 {% endblock %}
 
 {% block content %}
